Enable fast unmarshaller wave three

--- a/services/acm/src/main/resources/codegen-resources/customization.config
+++ b/services/acm/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
         "listCertificates"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
