--- a/services/backup/src/main/resources/codegen-resources/customization.config
+++ b/services/backup/src/main/resources/codegen-resources/customization.config
@@ -11,5 +11,5 @@
         "listRestoreJobs"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
