--- a/services/batch/src/main/resources/codegen-resources/customization.config
+++ b/services/batch/src/main/resources/codegen-resources/customization.config
@@ -8,5 +8,5 @@
         "listJobs"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
