--- a/services/config/src/main/resources/codegen-resources/customization.config
+++ b/services/config/src/main/resources/codegen-resources/customization.config
@@ -20,5 +20,5 @@
         "startConfigRulesEvaluation"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
