--- a/services/datasync/src/main/resources/codegen-resources/customization.config
+++ b/services/datasync/src/main/resources/codegen-resources/customization.config
@@ -7,5 +7,5 @@
     ],
     "generateEndpointClientTests": true,
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
