--- a/services/dax/src/main/resources/codegen-resources/customization.config
+++ b/services/dax/src/main/resources/codegen-resources/customization.config
@@ -7,5 +7,5 @@
         "describeSubnetGroups"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
