--- a/services/ecs/src/main/resources/codegen-resources/customization.config
+++ b/services/ecs/src/main/resources/codegen-resources/customization.config
@@ -17,5 +17,5 @@
         "submitTaskStateChange"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
