--- a/services/emr/src/main/resources/codegen-resources/customization.config
+++ b/services/emr/src/main/resources/codegen-resources/customization.config
@@ -23,5 +23,5 @@
         "DescribeJobFlows"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
