--- a/services/guardduty/src/main/resources/codegen-resources/customization.config
+++ b/services/guardduty/src/main/resources/codegen-resources/customization.config
@@ -10,5 +10,5 @@
         "deleteInvitations"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
