--- a/services/inspector/src/main/resources/codegen-resources/customization.config
+++ b/services/inspector/src/main/resources/codegen-resources/customization.config
@@ -56,5 +56,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
