--- a/services/lightsail/src/main/resources/codegen-resources/customization.config
+++ b/services/lightsail/src/main/resources/codegen-resources/customization.config
@@ -25,5 +25,5 @@
         "getStaticIps"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
