--- a/services/mediaconvert/src/main/resources/codegen-resources/customization.config
+++ b/services/mediaconvert/src/main/resources/codegen-resources/customization.config
@@ -3,5 +3,5 @@
         "*"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
