--- a/services/medialive/src/main/resources/codegen-resources/customization.config
+++ b/services/medialive/src/main/resources/codegen-resources/customization.config
@@ -12,5 +12,5 @@
         "createInputSecurityGroup"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
