--- a/services/pinpoint/src/main/resources/codegen-resources/customization.config
+++ b/services/pinpoint/src/main/resources/codegen-resources/customization.config
@@ -7,5 +7,5 @@
     },
     "underscoresInNameBehavior": "ALLOW",
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
