--- a/services/resourcegroupstaggingapi/src/main/resources/codegen-resources/customization.config
+++ b/services/resourcegroupstaggingapi/src/main/resources/codegen-resources/customization.config
@@ -4,5 +4,5 @@
         "getTagKeys"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
