--- a/services/sagemaker/src/main/resources/codegen-resources/customization.config
+++ b/services/sagemaker/src/main/resources/codegen-resources/customization.config
@@ -22,5 +22,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
