--- a/services/sfn/src/main/resources/codegen-resources/customization.config
+++ b/services/sfn/src/main/resources/codegen-resources/customization.config
@@ -6,5 +6,5 @@
     "serviceSpecificHttpConfig": "software.amazon.awssdk.services.sfn.internal.SfnHttpConfigurationOptions",
     "generateEndpointClientTests": true,
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
