--- a/services/sqs/src/main/resources/codegen-resources/customization.config
+++ b/services/sqs/src/main/resources/codegen-resources/customization.config
@@ -13,5 +13,5 @@
     },
     "enableGenerateCompiledEndpointRules": true,
     "batchManagerSupported": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
