--- a/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
+++ b/services/transcribestreaming/src/main/resources/codegen-resources/customization.config
@@ -8,5 +8,5 @@
         "MedicalTranscriptResultStream": ["TranscriptEvent"]
     },
     "usePriorKnowledgeForH2": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
