--- a/services/workspaces/src/main/resources/codegen-resources/customization.config
+++ b/services/workspaces/src/main/resources/codegen-resources/customization.config
@@ -12,5 +12,5 @@
         "describeAccount"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
