--- a/services/directconnect/src/main/resources/codegen-resources/customization.config
+++ b/services/directconnect/src/main/resources/codegen-resources/customization.config
@@ -21,5 +21,5 @@
         "DescribeInterconnectLoa"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
