--- a/services/directory/src/main/resources/codegen-resources/customization.config
+++ b/services/directory/src/main/resources/codegen-resources/customization.config
@@ -217,5 +217,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
