--- a/services/quicksight/src/main/resources/codegen-resources/customization.config
+++ b/services/quicksight/src/main/resources/codegen-resources/customization.config
@@ -146,5 +146,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
