Update rewrite versions at build time
This change changes add-transfer-manager-dependency.yml and
upgrade-sdk-dependencies.yml to velocity templates so that the version
number can be set at build time when buliding the v2-migration module.
This moves this version update process out of the buildspecs so that we
don't have to rely on them to have been run for builds to work
correctly.

--- a/v2-migration/pom.xml
+++ b/v2-migration/pom.xml
@@ -288,6 +288,26 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>com.nativelibs4java</groupId>
+                <artifactId>maven-velocity-plugin</artifactId>
+                <version>0.9</version>
+                <executions>
+                    <execution>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <velocitySources>src/main/resources/recipe-vm-templates</velocitySources>
+                    <resourcesOutputDirectory>${project.build.directory}/classes/META-INF/rewrite</resourcesOutputDirectory>
+                    <properties>
+                        <sdkVersion>${awsjavasdk.previous.version}</sdkVersion>
+                    </properties>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <configuration>
