Transforms for PutObjectRequest, putObject(), and upload()

--- a/v2-migration/src/main/resources/META-INF/rewrite/aws-sdk-java-v1-to-v2-with-tm.yml
+++ b/v2-migration/src/main/resources/META-INF/rewrite/aws-sdk-java-v1-to-v2-with-tm.yml
@@ -42,4 +42,5 @@ recipeList:
   - software.amazon.awssdk.v2migration.EnumCasingToV2
   - software.amazon.awssdk.v2migration.SdkBytesToByteBuffer
   - software.amazon.awssdk.v2migration.S3NonStreamingRequestToV2Complex
+  - software.amazon.awssdk.v2migration.S3PutObjectRequestToV2
   - software.amazon.awssdk.v2migration.TransferManagerMethodsToV2
