Fixed an issue in SequentialSubscriber where future never got completed when the consumer threw error

--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>commons-lang</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
