add http-auth-aws-crt for crt sigv4a tests

--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -152,6 +152,12 @@
             <version>${awsjavasdk.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>http-auth-aws-crt</artifactId>
+            <version>${awsjavasdk.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
