Enable fast unmarshaller wave four

--- a/services/cloudhsm/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudhsm/src/main/resources/codegen-resources/customization.config
@@ -31,5 +31,5 @@
         "listLunaClients"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
