--- a/services/cloudsearchdomain/src/main/resources/codegen-resources/customization.config
+++ b/services/cloudsearchdomain/src/main/resources/codegen-resources/customization.config
@@ -25,5 +25,5 @@
         "software.amazon.awssdk.services.cloudsearchdomain.internal.SwitchToPostInterceptor"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
