--- a/services/databasemigration/src/main/resources/codegen-resources/customization.config
+++ b/services/databasemigration/src/main/resources/codegen-resources/customization.config
@@ -17,5 +17,5 @@
         "describeReplicationTaskAssessmentResults"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
