--- a/services/kendra/src/main/resources/codegen-resources/customization.config
+++ b/services/kendra/src/main/resources/codegen-resources/customization.config
@@ -5,5 +5,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
