--- a/services/qbusiness/src/main/resources/codegen-resources/customization.config
+++ b/services/qbusiness/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,5 @@
 {
     "enableGenerateCompiledEndpointRules": true,
     "usePriorKnowledgeForH2": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
