--- a/services/rekognition/src/main/resources/codegen-resources/customization.config
+++ b/services/rekognition/src/main/resources/codegen-resources/customization.config
@@ -8,5 +8,5 @@
         "describeClusterSecurityGroups"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
