--- a/services/sms/src/main/resources/codegen-resources/customization.config
+++ b/services/sms/src/main/resources/codegen-resources/customization.config
@@ -11,5 +11,5 @@
         "listApps"
     ],
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
