--- a/services/budgets/src/main/resources/codegen-resources/customization.config
+++ b/services/budgets/src/main/resources/codegen-resources/customization.config
@@ -11,5 +11,5 @@
         }
     },
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
