--- a/services/omics/src/main/resources/codegen-resources/customization.config
+++ b/services/omics/src/main/resources/codegen-resources/customization.config
@@ -1,5 +1,5 @@
 {
     "generateEndpointClientTests": true,
     "enableGenerateCompiledEndpointRules": true,
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
