--- a/services/waf/src/main/resources/codegen-resources/wafregional/customization.config
+++ b/services/waf/src/main/resources/codegen-resources/wafregional/customization.config
@@ -26,5 +26,5 @@
         "listWebACLs",
         "listXssMatchSets"
     ],
-    "enableFastUnmarshaller": false
+    "enableFastUnmarshaller": true
 }
