some more dl stuff

--- a/pom.xml
+++ b/pom.xml
@@ -908,9 +908,11 @@
                                 </goals>
                                 <configuration>
                                     <!-- Sets the VM argument line used when integration tests are run. -->
+                                    <!-- this test needs a lot of memory, we need to increase java heap size or we get OOM in codebuild -->
                                     <argLine>-Xmx8g -Xms1024m -XX:+AllowRedefinitionToAddDeleteMethods</argLine>
                                     <includes>
                                         <include>**/s3/checksum/ChecksumIntegrationTesting.java</include>
+                                        <include>**/s3/checksum/DownloadStreamingIntegrationTesting.java</include>
                                     </includes>
                                     <trimStackTrace>false</trimStackTrace>
                                 </configuration>
