--- a/test/s3-tests/pom.xml
+++ b/test/s3-tests/pom.xml
@@ -164,6 +164,10 @@
             <version>${awsjavasdk.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>test-utils</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
